# bcxLibrary-Cpp

./: .gitignore  README-cn.md  README.md
bcx/libbcx/: .gitignore  BCX.hpp  CMakeCache.txt  CMakeLists.txt  bcx.hpp
bcx/libbcx/3rd/: CMakeLists.txt
bcx/libbcx/3rd/boost/android/: readme.md
bcx/libbcx/3rd/boost/ios/: readme.md
bcx/libbcx/3rd/boost/ios/lib/ofx/: __.SYMDEF
bcx/libbcx/3rd/boost/ios/lib/s/: __.SYMDEF
bcx/libbcx/3rd/openssl/prebuilt/android/: CMakeLists.txt
bcx/libbcx/3rd/secp256k1/: CMakeLists.txt
bcx/libbcx/3rd/secp256k1/prebuilt/android/arm64-v8a/: libsecp256k1.a.bak
bcx/libbcx/3rd/websockets/include/win32/: libwebsockets.h
bcx/libbcx/bcx/: BCX.cpp  BCXImp.cpp  BCXImp.hpp  CMakeLists.txt  Looper.cpp  Looper.hpp  Response.cpp  Response.hpp  Timer.cpp  Timer.hpp  bcx_api.cpp  bcx_api.hpp  bcxapi_p.cpp  bcxapi_p.hpp  bcxlog.cpp  bcxlog.hpp  bcxproto.h  bcxtimer.cpp  bcxtimer.hpp  bcxws.cpp  bcxws.hpp  boostHttpClient.hpp  errors.h  lua_types.hpp  nh_asset_info.hpp
bcx/libbcx/bcx/protocol/: account_info_for_reg.h  add_file_relate_account.cpp  add_file_relate_account.hpp  asset_update_restricted.cpp  asset_update_restricted.hpp  contract_call_function_operation.cpp  contract_call_function_operation.hpp  contract_create_operation.cpp  contract_create_operation.hpp  contract_object.cpp  contract_object.hpp  contract_revise_operation.hpp  create_file.hpp  crontab_cancel.cpp  crontab_cancel.hpp  crontab_create.cpp  crontab_create.hpp  crontab_recover.cpp  crontab_recover.hpp  file_signature.hpp  fill_nh_asset_order.cpp  fill_nh_asset_order.hpp  full_account.hpp  game_protocol_object.cpp  game_protocol_object.hpp  nh_cancel_asset_order_operation.hpp  nh_create_asset_operation.hpp  nh_create_asset_order_operation.hpp  nh_create_world_view_operation.cpp  nh_create_world_view_operation.hpp  nh_register_asset_creator_operation.cpp  nh_register_asset_creator_operation.hpp  nh_register_creator_operation.cpp  nh_register_creator_operation.hpp  nh_relate_asset_operation.cpp  nh_relate_asset_operation.hpp  nh_relate_world_view_operation.cpp  nh_relate_world_view_operation.hpp  nh_transfer_asset_operation.cpp  nh_transfer_asset_operation.hpp  (+7 more)
bcx/libbcx/chain/: CMakeLists.txt  db_notify.cpp  evaluator.cpp  is_authorized_asset.cpp
bcx/libbcx/chain/include/graphene/chain/: hardfork.hpp
bcx/libbcx/chain/include/graphene/chain/protocol/: account.hpp  asset_ops.hpp  block.hpp  committee_member.hpp  confidential.hpp  market.hpp  operations.hpp  proposal.hpp  transfer.hpp  vesting.hpp  witness.hpp
bcx/libbcx/chain/protocol/: asset_ops.cpp
bcx/libbcx/db/: Makefile
bcx/libbcx/db/include/graphene/db/: object_id.hpp
bcx/libbcx/fc/: CMakeLists.txt  Doxyfile
bcx/libbcx/fc/include/fc/: asio.hpp  bloom_filter.hpp  config.hpp  real128.hpp  static_variant.hpp  string.hpp
bcx/libbcx/fc/include/fc/container/: flat.hpp
bcx/libbcx/fc/include/fc/crypto/: aes.hpp  elliptic.hpp  pke.hpp  ripemd160.hpp  sha1.hpp  sha224.hpp  sha256.hpp  sha512.hpp
bcx/libbcx/fc/include/fc/interprocess/: container.hpp
bcx/libbcx/fc/include/fc/io/: enum_type.hpp  json.hpp  json_relaxed.hpp  raw.hpp  raw_unpack_file.hpp  varint.hpp
bcx/libbcx/fc/include/fc/log/: logger_config.hpp
bcx/libbcx/fc/include/fc/network/: url.hpp
bcx/libbcx/fc/include/fc/reflect/: typename.hpp  variant.hpp
bcx/libbcx/fc/include/fc/rpc/: cli.hpp  http_api.hpp  json_connection.hpp  state.hpp  websocket_api.hpp
bcx/libbcx/fc/include/fc/thread/: thread.hpp
bcx/libbcx/fc/src/: exception.cpp  filesystem.cpp  real128.cpp  stacktrace.cpp  string.cpp  time.cpp  uint128.cpp  variant.cpp  variant_object.cpp
bcx/libbcx/fc/src/crypto/: _digest_common.cpp  aes.cpp  base36.cpp  dh.cpp  elliptic_common.cpp  openssl.cpp  pke.cpp  sha224.cpp  sha256.cpp  sha512.cpp
bcx/libbcx/fc/src/io/: iostream.cpp  json.cpp
bcx/libbcx/fc/src/log/: appender.cpp  console_appender.cpp  gelf_appender.cpp  log_message.cpp  logger.cpp  logger_config.cpp
bcx/libbcx/fc/src/network/http/: websocket.cpp
bcx/libbcx/fc/src/rpc/: cli.cpp
bcx/libbcx/fc/src/thread/: thread_d.hpp
bcx/libbcx/fc/tests/: CMakeLists.txt  api.cpp  bip_lock  bloom_test.cpp  hmac_test.cpp  run-parallel-tests.sh  variant_test.cpp
bcx/libbcx/fc/tests/compress/: compress.cpp
bcx/libbcx/fc/tests/io/: stream_tests.cpp  varint_tests.cpp
bcx/libbcx/log/: BCXLog.cpp  BCXLog.hpp
bcx/libbcx/network/: BCXWS.cpp  BCXWS.hpp  Uri.cpp  WebSocket.cpp  WebSocket.hpp
bcx/libbcx/platform/: PlatformConfig.h  PlatformDefine.h  PlatformMacros.h
bcx/libbcx/platform/android/: PlatformDefine-android.h
bcx/libbcx/platform/ios/: PlatformDefine-ios.h
bcx/libbcx/platform/mac/: PlatformDefine-mac.h
bcx/libbcx/platform/win/: PlatformDefine-win.h
bcx/libbcx/protocol/: account_object.hpp  address.cpp  address.hpp  asset.hpp  asset_object.hpp  asset_ops.hpp  authority.hpp  base.hpp  buyback.hpp  config.hpp  contract_object.hpp  dynamic_global_property_object.hpp  ext.hpp  full_account.hpp  game_protocol_object.hpp  lua_types.hpp  market_object.hpp  memo.cpp  memo.hpp  object.cpp  object.hpp  object_id.hpp  special_authority.hpp  transaction.cpp  transaction.hpp  types.cpp  types.hpp  vote.cpp  vote.hpp
bcx/libbcx/protocol/operations/: account.hpp  contract.hpp  market.hpp  nhasset.hpp  operations.hpp  placehoder.hpp  transfer.hpp
bcx/libbcx/utils/: utils.cpp  utils.hpp
libbcx/: CMakeLists.txt
libbcx/bcx/: bcx_common.hpp  bcxapi_p.hpp  bcxconfig.cpp  bcxconfig.hpp  bcxdb.cpp  bcxdb.hpp  bcxlog.cpp  bcxlog.hpp  boostHttpClient.cpp
libbcx/network/: CMakeLists.txt  Uri.hpp  WebSocket.hpp
project/bcx-lib-android/: .gitignore  CMakeLists.txt  build.gradle
project/bcx-lib-android/src/main/cpp/: native-lib.cpp
project/bcx-lib-android/src/main/res/values/: strings.xml
project/bcx-lib-android/src/test/java/com/sdkbox/bcx/: ExampleUnitTest.java
test/bcx-android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
tools/: check_ios_libbcx_o.py  genlibs.py  ios_libbcx_all_o.txt  ios_libbcx_keep_o.txt  ios_libbcx_remove_o.txt  ios_libbcx_remove_o_all.txt  libbcx.o.txt
(+131 files in other folders)
